# OneLastCompiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  README.md
antlr/: README  sysy2022.g4  sysy2022.interp  sysy2022.tokens  sysy2022BaseVisitor.cpp  sysy2022BaseVisitor.h  sysy2022Lexer.cpp  sysy2022Lexer.h  sysy2022Lexer.interp  sysy2022Lexer.tokens  sysy2022Parser.cpp  sysy2022Parser.h  sysy2022Visitor.cpp  sysy2022Visitor.h
include/: Casting.h  ir.h
include/frontend/: IRVisitor.h
include/olc/: Support.h  debug.h
include/olc/backend/: ArmGen.h  ArmWriter.h  CodeGen.h  CodeWriter.h  Liveness.h  MachineIR.h  RegAlloc.h
include/olc/frontend/: AST.h  ConstFolder.h  IRVisitor.h  Parser.h  Visitor.h
include/olc/ir/: AsmWriter.h  IR.h  Type.h
include/olc/passes/: CanonicalizePass.h  ConstantFoldingPass.h  DCEPass.h  DCEProPass.h  DominanceAnalysis.h  GVNGCMPass.h  LoopAnalysis.h  Mem2Reg.h  Pass.h  PassManager.h  Passes.h  SCCPPass.h  SimplifyCFGPass.h  Utils.h
include/olc/utils/: SymbolTable.h  symtab.h
src/: Driver.cpp
src/backend/: ArmWriter.cpp  CodeWriter.cpp  Liveness.cpp  MachineIR.cpp
src/frontend/: Parser.cpp
src/ir/: AsmWriter.cpp  IR.cpp  Type.cpp
src/passes/: ConstantFoldingPass.cpp
src/utils/: symtab.cpp
test/: data.sh  data.txt  lsr.txt  test_ir_asm.cpp  test_ir_type.cpp  test_symtab.cpp
test/data/: test.sy
